# CULINEX

./: .cursorrules  .gitignore  README.md  adaptive_header_framework.py  analyze_oversized_region.py  analyze_oversized_region_v2.py  comprehensive_audit.json  debug_integration.py  generate_calibration_report.py  ingredient_audit.py  ingredient_audit_simple.py  ingredient_calibration.py  ingredient_intelligence.py  ingredient_line_parser.py  ingredient_matcher.py  ingredient_memory.py  ingredient_proposals.py  invoice_row_classifier.py  missing_same_band_total_analysis.md  missing_same_band_total_evidence_table.md  pyproject.toml  recipe-vault-local-server.py  recipe_corrections.py  recipe_ingredient_pipeline.py  recipe_parser.py  recipe_review.py  requirements.txt  restaurant-costing-app.html  run-parser-tests.bat  run-parser-tests.py  sprint18_2_corrected_analysis.md  table_boundary_framework.py  test_imports.py  trace_integration.py  verify_sprint18_1.py
docs/: AI_RULES.md  AI_RULES.md.txt  BASE44-INTEGRATION.md  CHANGELOG.md  (+17 more)
legacy/Codex/2026-06-10/build-a-complete-production-ready-desktop/ingredient_usage_analyzer/: README.md  pyproject.toml  requirements.txt
legacy/Codex/2026-06-10/build-a-complete-production-ready-desktop/ingredient_usage_analyzer/samples/: recipes.csv  sales.csv
legacy/Codex/2026-06-10/build-a-complete-production-ready-desktop/ingredient_usage_analyzer/src/ingredient_usage_analyzer/: __init__.py  config.py  main.py  models.py  sample_data.py  strict_cli.py
legacy/Codex/2026-06-10/build-a-complete-production-ready-desktop/ingredient_usage_analyzer/src/ingredient_usage_analyzer/controllers/: app_controller.py
legacy/Codex/2026-06-10/build-a-complete-production-ready-desktop/ingredient_usage_analyzer/tests/: test_strict_parser.py
(+255 files in other folders)
