[project]
name = "culinex"
version = "1.0.0"
description = "CULINEX - AI-powered restaurant operating platform for invoice importing, inventory, recipe costing, and kitchen intelligence."
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "openpyxl>=3.1",
  "pdfplumber>=0.11",
  "pillow>=10.4",
  "pypdf>=4.2",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "requests>=2.32",
  "numpy>=1.26",
  "rapidfuzz>=3.9"
]

[project.optional-dependencies]
ocr = [
  "paddleocr>=2.7",
  "paddlepaddle>=2.6"
]
dev = [
  "pytest>=8.2"
]

[project.scripts]
culinex-server = "recipe_vault_local_server:main"

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"